--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,7 +9,7 @@ name: INDIPAGE-Server CI
 
 on:
   push:
-    branches: [ "develop", "chore/#1" ]
+    branches: [ "develop"]
   pull_request:
     branches: [ "develop"]
 
