[CHORE] code deploy 에 필요한 버킷 이름 github secrets 에서 관리하도록 수정 #1

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,7 +6,7 @@ on:
     branches: [ develop, chore/#1 ] # main branch로 push 될 때 실행됩니다.
 
 env:
-  S3_BUCKET_NAME: build
+  S3_BUCKET_NAME: {{secrets.BUCKET_NAME_FOR_DEPLOY}}
 
 jobs:
   build:
