--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,40 +1,50 @@
 # 워크플로우의 이름 지정
-name: INDIPAGE-Server CD
+name: indipage-server-cd
 
+# 해당 workflow가 언제 실행될 것인지에 대한 트리거를 지정
 on:
   push:
     branches: [ develop, chore/#1 ] # main branch로 push 될 때 실행됩니다.
 
 env:
-  S3_BUCKET_NAME: {{secrets.BUCKET_NAME_FOR_DEPLOY}}
+  S3_BUCKET_NAME: ${{ secrets.BUCKET_NAME_FOR_DEPLOY }}
 
 jobs:
   build:
     name: Code deployment
 
+    # 실행 환경
     runs-on: ubuntu-latest
 
     steps:
+
+      # 1) 워크플로우 실행 전 기본적으로 체크아웃 필요
       - name: checkout
         uses: actions/checkout@v3
 
+      # 2) JDK 11버전 설치, 다른 JDK 버전을 사용하다면 수정
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
 
-      - name: application.properties 내용 변경
-        run:
-          echo "${{secrets.INDIPAGE_APPLICATION}}" >> ./application.yaml
-
+      # 3) 환경변수 파일 내용 변경
+      - name: make application.properties 파일 내용 변경
+        run: |
+          
+          # GitHub-Actions 에서 설정한 값을 application.yml 파일에 쓰기
+          echo "${{ secrets.INDIPAGE_APPLICATION }}" >> ./application.yaml
+          
+          # application.yml 파일 확인
           cat ./application.yaml
         shell: bash
 
+      # 이 워크플로우는 gradle build
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build with Gradle
+      - name: Build with Gradle # 실제 application build(-x 옵션을 통해 test는 제외)
         run: ./gradlew build -x test
 
       # 디렉토리 생성
@@ -54,7 +64,7 @@ jobs:
         run: cp ./scripts/*.sh ./deploy
 
       - name: Make zip file
-        run: zip -r ./sopt_server.zip ./deploy
+        run: zip -r ./indipage_server.zip ./deploy
         shell: bash
 
       - name: Configure AWS credentials
@@ -65,7 +75,7 @@ jobs:
           aws-region: ap-northeast-2
 
       - name: Upload to S3
-        run: aws s3 cp --region ap-northeast-2 ./sopt_server.zip s3://$S3_BUCKET_NAME/
+        run: aws s3 cp --region ap-northeast-2 ./indipage_server.zip s3://$S3_BUCKET_NAME/
 
       # Deploy
       - name: Deploy
@@ -74,8 +84,8 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
         run:
           aws deploy create-deployment
-          --application-name sopt-server-codedeploy
-          --deployment-group-name sopt-server-codedeploy-group
+          --application-name indipag-server-codedeploy
+          --deployment-group-name indipag-server-codedeploy-group
           --file-exists-behavior OVERWRITE
-          --s3-location bucket=sopt32-seminar,bundleType=zip,key=sopt_server.zip
+          --s3-location bucket=indipage/build,bundleType=zip,key=indipage_server.zip
           --region ap-northeast-2
