--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ os: linux
 
 files:
   - source:  /
-    destination: /home/ubuntu/SERVER
+    destination: /home/ubuntu/app
     overwrite: yes
 
 permissions:
