[CHORE] 트리거 브랜치 목록에서 테스트용 브랜치 삭제 #1

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,9 +9,9 @@ name: INDIPAGE-Server CI
 
 on:
   push:
-    branches: [ "develop", "chore/#1" ]
+    branches: [ "develop" ]
   pull_request:
-    branches: [ "develop", "chore/#1" ]
+    branches: [ "develop" ]
 
 permissions:
   contents: read
