--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,7 +4,7 @@ name: indipage-server-cd
 # 해당 workflow가 언제 실행될 것인지에 대한 트리거를 지정
 on:
   push:
-    branches: [ develop, chore/#1 ] # main branch로 push 될 때 실행됩니다.
+    branches: [ develop ]
 
 env:
   S3_BUCKET_NAME: ${{ secrets.BUCKET_NAME_FOR_DEPLOY }}
