--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,8 +5,6 @@ spring:
 # local
 ---
 spring:
-  profiles: local
-
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${db-url}
@@ -20,6 +18,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  config:
+    activate:
+      on-profile: local
 
 server:
   port: 8080
@@ -54,8 +55,6 @@ springdoc:
 ---
 
 spring:
-  profiles: set1
-
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${db-url}
@@ -69,6 +68,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  config:
+    activate:
+      on-profile: set1
 
 server:
   port: 8081
@@ -103,8 +105,6 @@ springdoc:
 ---
 
 spring:
-  profiles: set2
-
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${db-url}
@@ -118,6 +118,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  config:
+    activate:
+      on-profile: set2
 
 server:
   port: 8082
