--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,14 +30,11 @@ jobs:
           distribution: 'temurin'
 
       # 3) 환경변수 파일 내용 변경
-      - name: make application.properties 파일 내용 변경
-        run: |
-          
-          # GitHub-Actions 에서 설정한 값을 application.yml 파일에 쓰기
+      - name: make application.yaml 파일 내용 변경
+        run:           
+          # GitHub-Actions 에서 설정한 값을 application.yaml 파일에 쓰기
           echo "${{ secrets.INDIPAGE_APPLICATION }}" >> ./application.yaml
-          
-          # application.yml 파일 확인
-          cat ./application.yaml
+        
         shell: bash
 
       # 이 워크플로우는 gradle build
