--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
   config:
     activate:
       on-profile: local
-      
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${db-url}
@@ -117,7 +117,7 @@ spring:
   config:
     activate:
       on-profile: set2
-      
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${db-url}
@@ -146,6 +146,12 @@ cloud:
       bucket: ${s3-bucket}
     stack:
       auto: false
+
+oauth:
+  apple:
+    iss: ${apple-iss}
+    client-id: ${apple-client-id}
+    nonce: ${apple-nonce}
 
 springdoc:
   packages-to-scan: indipage.org.indipage
