[ADD] 누락된 yaml 관련 설정 추가 #111

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -59,6 +59,12 @@ springdoc:
 jwt:
   secret: ${jwt-secret}
 
+oauth:
+  apple:
+    iss: ${apple-iss}
+    client-id: ${apple-client-id}
+    nonce: ${apple-nonce}
+
 # set1
 ---
 
@@ -109,6 +115,13 @@ springdoc:
       enabled: true
     cache:
       disabled: true
+
+oauth:
+  apple:
+    iss: ${apple-iss}
+    client-id: ${apple-client-id}
+    nonce: ${apple-nonce}
+
 
 # set2
 ---
