[DOCS] gitignore에 yaml 설정 파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,6 @@ gradle-app.setting
 # pplication.yaml
 
 # End of https://www.gitignore.io/api/java,macos,gradle,intellij
+
+# yaml 파일
+src/main/resources/*
