--- a/.gitignore
+++ b/.gitignore
@@ -168,4 +168,4 @@ gradle-app.setting
 # End of https://www.gitignore.io/api/java,macos,gradle,intellij
 
 # yaml 파일
-src/main/resources/*
+src/main/resources/application.yaml
