--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,4 @@ gradle-app.setting
 # End of https://www.gitignore.io/api/java,macos,gradle,intellij
 
 # yaml 파일
+src/main/resources/application.yaml
